--- a/index.html
+++ b/index.html
@@ -8,12 +8,22 @@
 		<meta
 			http-equiv="X-Content-Security-Policy"
 			content="default-src 'self'; script-src 'self'" />
-		<title>Hello from Electron renderer!</title>
+		<title>NIM game by B2203518</title>
+		<link rel="stylesheet" href="styles.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+			rel="stylesheet" />
 	</head>
 	<body>
-		<h1>Hello from Electron renderer!</h1>
-		<p>👋</p>
-		<p id="info"></p>
+		<h1>Welcome to NIM game by HNANhat</h1>
+		<div class="">
+			<a href="./play-with-computer.html">Play with computer</a>
+		</div>
+		<div class="">
+			<a href="./play-with-player.html">Play with player</a>
+		</div>
 	</body>
 	<script src="./renderer.js"></script>
 </html>
