Add pages navigation

--- a/pages/play-vs-player.html
+++ b/pages/play-vs-player.html
@@ -4,9 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Play with player</title>
+		<link rel="stylesheet" href="../assets/styles/reset.css" />
+		<link rel="stylesheet" href="../assets/styles/styles.css" />
 	</head>
 	<body>
 		<h1>Play with player</h1>
-		<a href="index.html">Home</a>
+		<a href="../index.html">Home</a>
 	</body>
 </html>
