--- a/index.html
+++ b/index.html
@@ -2,28 +2,89 @@
 <html>
 	<head>
 		<meta charset="UTF-8" />
-		<meta
-			http-equiv="Content-Security-Policy"
-			content="default-src 'self'; script-src 'self'" />
-		<meta
-			http-equiv="X-Content-Security-Policy"
-			content="default-src 'self'; script-src 'self'" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>NIM game by B2203518</title>
-		<link rel="stylesheet" href="styles.css" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-			rel="stylesheet" />
+		<link rel="stylesheet" href="./assets/styles/reset.css" />
+		<link rel="stylesheet" href="./assets/styles/styles.css" />
+		<link rel="stylesheet" href="./assets/styles/index.css" />
 	</head>
 	<body>
-		<h1>Welcome to NIM game by HNANhat</h1>
-		<div class="">
-			<a href="./play-with-computer.html">Play with computer</a>
+		<div class="container">
+			<!-- Welcome sign -->
+			<h1>NIM Game</h1>
+
+			<!-- Menu -->
+			<div class="menu">
+				<button
+					href="./pages/play-vs-computer.html"
+					id="btn-play-vs-computer">
+					CHƠI VỚI MÁY
+				</button>
+				<button
+					href="./pages/play-vs-player.html"
+					id="btn-play-vs-player">
+					CHƠI VỚI NGƯỜI
+				</button>
+				<button href="./pages/rules.html" id="btn-rules">
+					LUẬT CHƠI
+				</button>
+				<button href="./pages/statistics.html" id="btn-statistics">
+					THỐNG KÊ
+				</button>
+			</div>
 		</div>
-		<div class="">
-			<a href="./play-with-player.html">Play with player</a>
+
+		<!-- Overlay -->
+		<div class="overlay"></div>
+
+		<!-- Modal for setting up VS Computer -->
+		<div class="modal" id="modal-play-vs-computer">
+			<header>
+				<h2>SET UP</h2>
+			</header>
+
+			<form action="">
+				<div class="difficulty-input">
+					<label for="difficulty">Difficulty</label>
+					<input
+						type="radio"
+						id="hard"
+						name="difficulty"
+						value="hard" />
+					<label for="hard">Hard</label>
+					<input
+						type="radio"
+						id="easy"
+						name="difficulty"
+						value="easy" />
+					<label for="easy">Easy</label>
+				</div>
+
+				<label for="numPiles">Number of piles</label>
+				<input type="text" value="3" id="numPiles" />
+			</form>
+
+			<footer>
+				<button id="btn-cancel">Cancel</button>
+				<button id="btn-start">Start</button>
+			</footer>
+		</div>
+
+		<!-- Modal for setting up VS Player -->
+		<div class="modal" id="modal-play-vs-player">
+			<header>
+				<h2>SET UP</h2>
+			</header>
+
+			<form action="">
+			</form>
+
+			<footer>
+				<button id="btn-cancel">Cancel</button>
+				<button id="btn-start">Start</button>
+			</footer>
 		</div>
 	</body>
 	<script src="./renderer.js"></script>
+	<script src="./assets/scripts/index.js"></script>
 </html>
