Add a bunch of features that I don't remember their names

--- a/index.html
+++ b/index.html
@@ -35,39 +35,54 @@
 		</div>
 
 		<!-- Overlay -->
-		<div class="overlay"></div>
+		<div id="overlay"></div>
 
 		<!-- Modal for setting up VS Computer -->
 		<div class="modal" id="modal-play-vs-computer">
 			<header>
 				<h2>SET UP</h2>
+				<button>X</button>
 			</header>
 
-			<form action="">
-				<div class="difficulty-input">
+			<form action="" id="form-play-vs-computer">
+				<!-- Difficulty -->
+				<div class="input-group">
 					<label for="difficulty">Difficulty</label>
-					<input
-						type="radio"
-						id="hard"
-						name="difficulty"
-						value="hard" />
-					<label for="hard">Hard</label>
-					<input
-						type="radio"
-						id="easy"
-						name="difficulty"
-						value="easy" />
-					<label for="easy">Easy</label>
+					<div class="difficulty-option-group">
+						<input
+							type="radio"
+							id="easy"
+							name="difficulty"
+							value="easy"
+							checked />
+						<label for="easy">Easy</label>
+						<input
+							type="radio"
+							id="hard"
+							name="difficulty"
+							value="hard" />
+						<label for="hard">Hard</label>
+					</div>
 				</div>
 
-				<label for="numPiles">Number of piles</label>
-				<input type="text" value="3" id="numPiles" />
-			</form>
+				<!-- Number of piles -->
+				<div class="input-group">
+					<label for="numPiles">Number of piles</label>
+					<input type="text" value="3" id="numPiles" />
+				</div>
 
-			<footer>
-				<button id="btn-cancel">Cancel</button>
-				<button id="btn-start">Start</button>
-			</footer>
+				<!-- Objects per pile -->
+				<div class="input-group">
+					<label for="objPerPile">Objects per pile</label>
+					<input type="text" value="5" id="objPerPile" />
+				</div>
+
+				<!-- Buttons -->
+				<div class="btn-group">
+					<button id="btn-cancel" type="button">Cancel</button>
+					<button id="btn-start" type="button">Start</button>
+				</div>
+			</form>
 		</div>
 
 		<!-- Modal for setting up VS Player -->
@@ -76,15 +91,47 @@
 				<h2>SET UP</h2>
 			</header>
 
-			<form action="">
-			</form>
+			<form action="" id="form-play-vs-player">
+				<!-- Difficulty -->
+				<div class="input-group">
+					<label for="difficulty">Difficulty</label>
+					<div class="difficulty-option-group">
+						<input
+							type="radio"
+							id="easy"
+							name="difficulty"
+							value="easy"
+							checked />
+						<label for="easy">Easy</label>
+						<input
+							type="radio"
+							id="hard"
+							name="difficulty"
+							value="hard" />
+						<label for="hard">Hard</label>
+					</div>
+				</div>
 
-			<footer>
-				<button id="btn-cancel">Cancel</button>
-				<button id="btn-start">Start</button>
-			</footer>
+				<!-- Number of piles -->
+				<div class="input-group">
+					<label for="numPiles">Number of piles</label>
+					<input type="text" value="3" id="numPiles" />
+				</div>
+
+				<!-- Objects per pile -->
+				<div class="input-group">
+					<label for="objPerPile">Objects per pile</label>
+					<input type="text" value="5" id="objPerPile" />
+				</div>
+
+				<!-- Buttons -->
+				<div class="btn-group">
+					<button id="btn-cancel" type="button">Cancel</button>
+					<button id="btn-start" type="button">Start</button>
+				</div>
+			</form>
 		</div>
 	</body>
-	<script src="./renderer.js"></script>
+
 	<script src="./assets/scripts/index.js"></script>
 </html>
