--- a/pages/play-vs-player.html
+++ b/pages/play-vs-player.html
@@ -9,6 +9,51 @@
 	</head>
 	<body>
 		<h1>Play with player</h1>
-		<a href="../index.html">Home</a>
+		<button id="btn-home">&larr;</button>
+
+		<div class="player" id="player-1">Player 1</div>
+		<div class="player" id="player-2">Player 2</div>
+
+		<div class="container" id="game-canvas"></div>
+		<button id="btn-remove">Remove Selected</button>
+
+		<!-- Overlay -->
+		<div id="overlay"></div>
+
+		<!-- Return home modal -->
+		<div class="modal" id="modal-return-home">
+			<header>
+				<h2>YOU WANT TO EXIT?</h2>
+				<button id="btn-exit">X</button>
+			</header>
+
+			<div class="body">
+				<p>Do you want to save the game before quitting?</p>
+			</div>
+
+			<footer>
+				<button id="btn-exit-without-save">Exit without save</button>
+				<button id="btn-save-and-exit">Save & Exit</button>
+			</footer>
+		</div>
+
+		<!-- Notify winner modal -->
+		<div class="modal" id="modal-notify-winner">
+			<header>
+				<h2><span id="winner"></span> WON!</h2>
+			</header>
+
+			<div class="body"></div>
+
+			<footer>
+				<a href="../index.html">Home</a>
+			</footer>
+		</div>
 	</body>
+
+	<script type="module" src="../assets/scripts/modal-exit.js"></script>
+	<script type="module" src="../assets/scripts/generate-game.js"></script>
+	<script
+		type="module"
+		src="../assets/scripts/play-vs-player-game-logic.js"></script>
 </html>
