--- a/pages/statistics.html
+++ b/pages/statistics.html
@@ -10,5 +10,7 @@
 	<body>
 		<h1>Statistics</h1>
 		<a href="../index.html">Home</a>
+
+		<script type="module" src="../assets/scripts/statistics.js"></script>
 	</body>
 </html>
